# LibreGaming-Solus-OS

./: setup.cfg
