[metadata]
name = LibreGaming 
version = 0.3
description = Install Gaming Packages with ease
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jeyso215/LibreGaming-Solus-OS.git
author = Jeyso215
license = AGPL-3.0
license_files =
	LICENSE

[options]
include_package_data = True
packages = find:
install_requires =
	argparse
	requests
	wget
python_requires = >3.7

[options.entry_points]
console_scripts =
    libregaming  = LibreGaming:main 
    LibreGaming  = LibreGaming:main
